Changement menu pour utilser un a

--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
         <header>
             <nav class="menu">
                 <ul>
-                    <li>Accueil</li>
-                    <li>Qui suis-je</li>
-                    <li>Mes travaux</li>
-                    <li>Me contacter</li>
+                    <li><a href="#">Accueil</a></li>
+                    <li><a href="#">Qui suis-je</a></li>
+                    <li><a href="#">Mes travaux</a></li>
+                    <li><a href="#">Me contacter</a></li>
                 </ul>
             </nav>
         </header>
