--- a/index.html
+++ b/index.html
@@ -15,13 +15,47 @@
         <header>
             <nav class="menu">
                 <ul>
-                    <li><a href="#">Accueil</a></li>
-                    <li><a href="#">Qui suis-je</a></li>
-                    <li><a href="#">Mes travaux</a></li>
-                    <li><a href="#">Me contacter</a></li>
+                    <li><a href="#" class="uppercase">Accueil</a></li>
+                    <li><a href="#" class="uppercase">Qui suis-je</a></li>
+                    <li><a href="#" class="uppercase">Mes travaux</a></li>
+                    <li><a href="#" class="uppercase">Me contacter</a></li>
                 </ul>
             </nav>
         </header>
+
+        <div class="card">
+            <main>
+                <section>
+                    <article class="infos">
+                        <h1 class="uppercase">Benjamin Bourgouin</h1>
+                        <h2>
+                            Analyste Développeur
+                            <span>& Designer numérique</span>
+                        </h2>
+                        <a href="#" class="uppercase">Me connaitre</a>
+                    </article>
+                    <article class="photo">
+                        <img src="https://placekitten.com/200/200" alt="Une photo de moi | Benjamin Bourgouin">
+                    </article>
+                </section>
+            
+                <footer>
+                    <article>
+                        <p class="uppercase">Réseaux sociaux</p>
+                        <div class="socials">
+                            <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                            <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                            <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                        </div>
+                    </article>
+                    <article class="mail">
+                        <p class="uppercase">Me contacter</p>
+                        <a href="">benjamin.bourgouin.pro@gmail.com</a>
+                        <p class="phone">438-493-4734</p>
+                    </article>
+                </footer>
+            </main>
+        </div>
     </div>
 </body>
 </html>
