Creation de la page infos.html

--- a/index.html
+++ b/index.html
@@ -11,51 +11,50 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
 </head>
 <body>
-    <div class="background">
-        <header>
-            <nav class="menu">
-                <ul>
-                    <li><a href="#" class="uppercase">Accueil</a></li>
-                    <li><a href="#" class="uppercase">Qui suis-je</a></li>
-                    <li><a href="#" class="uppercase">Mes travaux</a></li>
-                    <li><a href="#" class="uppercase">Me contacter</a></li>
-                </ul>
-            </nav>
-        </header>
+    <div class="background"></div>
+    <header>
+        <nav class="menu">
+            <ul>
+                <li><a href="#" class="uppercase">Accueil</a></li>
+                <li><a href="pages/infos.html" class="uppercase">Qui suis-je</a></li>
+                <li><a href="#" class="uppercase">Mes travaux</a></li>
+                <li><a href="#" class="uppercase">Me contacter</a></li>
+            </ul>
+        </nav>
+    </header>
 
-        <div class="card">
-            <main>
-                <section>
-                    <article class="infos">
-                        <h1 class="uppercase">Benjamin Bourgouin</h1>
-                        <h2>
-                            Analyste Développeur
-                            <span>& Designer numérique</span>
-                        </h2>
-                        <a href="#" class="uppercase">Me connaitre</a>
-                    </article>
-                    <article class="photo">
-                        <img src="https://placekitten.com/200/200" alt="Une photo de moi | Benjamin Bourgouin">
-                    </article>
-                </section>
-            
-                <footer>
-                    <article>
-                        <p class="uppercase">Réseaux sociaux</p>
-                        <div class="socials">
-                            <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
-                            <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
-                            <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
-                        </div>
-                    </article>
-                    <article class="mail">
-                        <p class="uppercase">Me contacter</p>
-                        <a href="">benjamin.bourgouin.pro@gmail.com</a>
-                        <p class="phone">438-493-4734</p>
-                    </article>
-                </footer>
-            </main>
-        </div>
+    <div class="card">
+        <main>
+            <section>
+                <article class="infos">
+                    <h1 class="uppercase">Benjamin Bourgouin</h1>
+                    <h2>
+                        Analyste Développeur
+                        <span>& Designer numérique</span>
+                    </h2>
+                    <a href="#" class="uppercase">Me connaitre</a>
+                </article>
+                <article class="photo">
+                    <img src="https://placekitten.com/200/200" alt="Une photo de moi | Benjamin Bourgouin">
+                </article>
+            </section>
+        
+            <footer>
+                <article>
+                    <p class="uppercase">Réseaux sociaux</p>
+                    <div class="socials">
+                        <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                        <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                        <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                    </div>
+                </article>
+                <article class="mail">
+                    <p class="uppercase">Me contacter</p>
+                    <a href="">benjamin.bourgouin.pro@gmail.com</a>
+                    <p class="phone">438-493-4734</p>
+                </article>
+            </footer>
+        </main>
     </div>
 </body>
 </html>
