--- a/pages/infos.html
+++ b/pages/infos.html
@@ -37,21 +37,25 @@
             <h1>Mon expertise</h1>
             <ul id="expertiseContainer"></ul>
         </section>
+        <div class="clear"></div>
 
         <section class="technologies">
             <h2>Technologies</h2>
             <ul id="technologiesContainer"></ul>
         </section>
+        <div class="clear"></div>
 
         <section class="formations">
             <h2>Mes Formations</h2>
             <ul id="formationsContainer"></ul>
         </section>
+        <div class="clear"></div>
 
         <section class="experiences">
             <h2>Mes expériences</h2>
             <ul id="experiencesContainer"></ul>
         </section>
+        <div class="clear"></div>
     </main>
 
     <script>
@@ -61,11 +65,52 @@
                 all: {
                     expertise1: {
                         id:1,
-                        name: 'untel'
+                        name: 'Développement web'
                     },
                     expertise2: {
                         id:2,
-                        name: 'unautretel'
+                        name: 'Développement mobile'
+                    },
+                    expertise3: {
+                        id:3,
+                        name: 'Front-End'
+                    },
+                    expertise4: {
+                        id:4,
+                        name: 'Back-End'
+                    }
+                    ,
+                    expertise5: {
+                        id:5,
+                        name: "Création d'identité graphique"
+                    },
+                    expertise6: {
+                        id:6,
+                        name: 'Approche UX/UI'
+                    },
+                    expertise7: {
+                        id:7,
+                        name: 'Wireframing & prototypage'
+                    },
+                    expertise8: {
+                        id:8,
+                        name: 'Analyse de besoins'
+                    },
+                    expertise9: {
+                        id:9,
+                        name: 'Architecture REST'
+                    },
+                    expertise10: {
+                        id:10,
+                        name: 'Architecture SOAP'
+                    },
+                    expertise11: {
+                        id:11,
+                        name: 'Optimisation du référencement (SEO)'
+                    },
+                    expertise12: {
+                        id:12,
+                        name: 'Méthode agile'
                     }
                 }
             },
