--- a/pages/infos.html
+++ b/pages/infos.html
@@ -119,11 +119,67 @@
                 all: {
                     techno1: {
                         id:1,
-                        name: 'untel'
+                        name: 'https://placekitten.com/30/30'
                     },
                     techno2: {
                         id:2,
-                        name: 'unautretel'
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno3: {
+                        id:3,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno4: {
+                        id:4,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno5: {
+                        id:5,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno6: {
+                        id:6,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno7: {
+                        id:7,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno8: {
+                        id:8,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno9: {
+                        id:9,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno10: {
+                        id:10,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno11: {
+                        id:11,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno12: {
+                        id:12,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno13: {
+                        id:13,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno14: {
+                        id:14,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno15: {
+                        id:15,
+                        name: 'https://placekitten.com/30/30'
+                    },
+                    techno16: {
+                        id:16,
+                        name: 'https://placekitten.com/30/30'
                     }
                 }
             },
