--- a/pages/infos.html
+++ b/pages/infos.html
@@ -188,11 +188,22 @@
                 all: {
                     formation1: {
                         id:1,
-                        name: 'untel'
+                        name: 'Programmation et technologies web',
+                        schoolName: "Institut Supérieur d'Informatique",
+                        year: '2021 - 2023'
                     },
                     formation2: {
                         id:2,
-                        name: 'unautretel'
+                        name: 'Webdesign et Communication graphique',
+                        schoolName: "Institut de Création et d'animation Numérique",
+                        year: '2018 - 2021'
+                    }
+                    ,
+                    formation3: {
+                        id:3,
+                        name: 'Baccalauréat Scientifique, spécialité Informatique et Sciences du Numérique',
+                        schoolName: "Lycée Flora Tristan",
+                        year: '2015 - 2018'
                     }
                 }
             },
