--- a/pages/infos.html
+++ b/pages/infos.html
@@ -212,11 +212,33 @@
                 all: {
                     experience1: {
                         id:1,
-                        name: 'untel'
+                        jobName: 'Intervenant en programmation et logiciels - freelance',
+                        jobLocation: 'DigiActivity',
+                        date: 'Depuis février 2021'
                     },
                     experience2: {
                         id:2,
-                        name: 'unautretel'
+                        jobName: 'Assistant Webdesigner',
+                        jobLocation: 'Le Livre de Poche',
+                        date: '2019 - 2021'
+                    },
+                    experience3: {
+                        id:3,
+                        jobName: 'Designer Web et réseaux sociaux',
+                        jobLocation: 'Agence Taste',
+                        date: 'Jan - Juin 2019'
+                    },
+                    experience4: {
+                        id:4,
+                        jobName: 'Graphiste / Infographiste',
+                        jobLocation: 'Novodos',
+                        date: 'Nov - Dec 2018'
+                    },
+                    experience5: {
+                        id:5,
+                        jobName: 'Préposé à la clientèle',
+                        jobLocation: 'Le Walk-In du Magasin Général du Vieux-Montréal',
+                        date: 'Depuis Septembre 2021'
                     }
                 }
             }
