--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <ul>
                 <li><a href="#" class="uppercase">Accueil</a></li>
                 <li><a href="pages/infos.html" class="uppercase">Qui suis-je</a></li>
-                <li><a href="#" class="uppercase">Mes travaux</a></li>
+                <li><a href="pages/work.html" class="uppercase">Mes travaux</a></li>
                 <li><a href="#" class="uppercase">Me contacter</a></li>
             </ul>
         </nav>
