--- a/pages/infos.html
+++ b/pages/infos.html
@@ -20,7 +20,7 @@
             <ul>
                 <li><a href="../index.html" class="uppercase">Accueil</a></li>
                 <li><a href="#" class="uppercase">Qui suis-je</a></li>
-                <li><a href="#" class="uppercase">Mes travaux</a></li>
+                <li><a href="work.html" class="uppercase">Mes travaux</a></li>
                 <li><a href="#" class="uppercase">Me contacter</a></li>
             </ul>
         </nav>
