ok pour presentation

--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,8 +9,12 @@
     <link rel="stylesheet" href="css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
+    <link rel='stylesheet' href='https://cdn-uicons.flaticon.com/uicons-brands/css/uicons-brands.css'>
 </head>
+
 <body>
     <div class="background"></div>
     <header>
@@ -32,29 +37,37 @@
                         Analyste Développeur
                         <span>& Designer numérique</span>
                     </h2>
-                    <a href="#" class="uppercase">Me connaitre</a>
+                    <a href="files/CV_BenjaminBourgouin.pdf" class="uppercase" download="CV_BenjaminBourgouin"
+                        title="Téléchargez mon CV | Benjamin Bourgouin">Me
+                        connaitre</a>
                 </article>
                 <article class="photo">
-                    <img src="https://placekitten.com/200/200" alt="Une photo de moi | Benjamin Bourgouin">
+                    <img src="images/photo/photo-personnelle-benjamin-bourgouin.jpg"
+                        alt="Une photo de moi | Benjamin Bourgouin">
                 </article>
             </section>
-        
+
             <footer>
                 <article>
                     <p class="uppercase">Réseaux sociaux</p>
                     <div class="socials">
-                        <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
-                        <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
-                        <a class="social"><img src="https://placekitten.com/30/30" alt=""></a>
+                        <a class="social" title="Contactez-moi sur LinkedIn | Benjamin Bourgouin">
+                            <img src="images/socials/linkedin.svg" alt="Logo de LinkedIn | Benjamin Bourgouin" />
+                        </a>
+                        <a class="social" title="Découvrez mes travaux sur GitHub | Benjamin Bourgouin">
+                            <img src="images/socials/github.svg" alt="Logo de GitHub | Benjamin Bourgouin" />
+                        </a>
                     </div>
                 </article>
                 <article class="mail">
                     <p class="uppercase">Me contacter</p>
-                    <a href="">benjamin.bourgouin.pro@gmail.com</a>
+                    <a href="mailto:benjamin.bourgouin.pro@gmail.com?subject=Prise de contact depuis le portfolio"
+                        title="Contactez-moi par courriel | Benjamin Bourgouin">benjamin.bourgouin.pro@gmail.com</a>
                     <p class="phone">438-493-4734</p>
                 </article>
             </footer>
         </main>
     </div>
 </body>
+
 </html>
