--- a/pages/work.html
+++ b/pages/work.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,15 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <script src="../script/works.js"></script>
 </head>
+
 <body>
     <div class="background"></div>
     <header>
@@ -34,28 +39,34 @@
             details: [
                 {
                     id: 'Kadaboo',
-                    name:'Kadaboo',
-                    description: 'ceci est la description du projet',
-                    image:'https://placekitten.com/400/250',
+                    name: 'Kadaboo',
+                    description: "Kadaboo est une application mobile ciblant les professionnel.le.s du milieu de l’éducation, leur proposant une banque d’activités pédagogiques inspirantes, à réaliser avec les enfants et/ou élèves sous leur responsabilités. Un portage web a également été mis en place.",
+                    image: '../images/works/kadaboo.jpg',
                     technologies: [
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20'
+                        '../images/technologies/android.svg',
+                        '../images/technologies/kotlin.svg',
+                        '../images/technologies/sql.svg',
+                        '../images/technologies/spring.svg',
+                        '../images/technologies/springboot.svg',
+                        '../images/technologies/react.svg',
+                        '../images/technologies/node.svg',
+                        '../images/technologies/sass.svg',
+                        '../images/technologies/sql.svg'
                     ]
                 },
                 {
-                    id:'Anky',
-                    name:'Anky',
-                    description: 'ceci est la description du projet',
-                    image:'https://placekitten.com/400/250',
+                    id: 'Anky',
+                    name: 'Anky',
+                    description: "Réalisation avec contraintes d'une application, en travaillant en équipe sur le modèle d'une start-up. Anky est une application anti-spoiler, qui filtre les messages de toutes sources pour vous cacher les contenus pouvant potentiellement vous spoiler vos séries préférées.",
+                    image: '../images/works/anky.jpg',
                     technologies: [
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20',
-                        'https://placekitten.com/20/20'
+                        '../images/technologies/html.svg',
+                        '../images/technologies/sass.svg',
+                        '../images/technologies/javascript.svg',
+                        '../images/technologies/jquery.svg',
+                        '../images/technologies/php.svg',
+                        '../images/technologies/symfony.svg',
+                        '../images/technologies/sql.svg'
                     ]
                 }
             ]
@@ -63,4 +74,5 @@
         Works.init(WORKS)
     </script>
 </body>
+
 </html>
