--- a/pages/infos.html
+++ b/pages/infos.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="fr">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,11 +9,15 @@
     <link rel="stylesheet" href="../css/style.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap" rel="stylesheet">
+    <link
+        href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100;0,200;0,300;0,400;0,500;0,600;0,700;0,800;0,900;1,100;1,200;1,300;1,400;1,500;1,600;1,700;1,800;1,900&display=swap"
+        rel="stylesheet">
     <link href="https://fonts.googleapis.com/css2?family=DM+Serif+Display:ital@0;1&display=swap" rel="stylesheet">
-    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;200;300;400;500;600;700&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montagu+Slab:wght@100;200;300;400;500;600;700&display=swap"
+        rel="stylesheet">
     <script src="../script/infos.js"></script>
 </head>
+
 <body>
     <div class="background"></div>
     <header>
@@ -29,8 +34,9 @@
     <main class="infos">
         <div class="quote">
             <p><strong>
-                Salut ! Moi c'est Benjamin, passionné inconditionnel des nouvelles technologies et de la création numérique en tout genre. Découvre en un peu plus sur moi juste en dessous ! 
-            </strong></p>
+                    Salut ! Moi c'est Benjamin, passionné inconditionnel des nouvelles technologies et de la création
+                    numérique en tout genre. Découvre en un peu plus sur moi juste en dessous !
+                </strong></p>
         </div>
 
         <section class="expertise">
@@ -64,53 +70,61 @@
                 area: document.getElementById('expertiseContainer'),
                 all: {
                     expertise1: {
-                        id:1,
+                        id: 1,
                         name: 'Développement web'
                     },
                     expertise2: {
-                        id:2,
+                        id: 2,
                         name: 'Développement mobile'
                     },
                     expertise3: {
-                        id:3,
+                        id: 3,
                         name: 'Front-End'
                     },
                     expertise4: {
-                        id:4,
+                        id: 4,
                         name: 'Back-End'
                     }
                     ,
                     expertise5: {
-                        id:5,
+                        id: 5,
                         name: "Création d'identité graphique"
                     },
                     expertise6: {
-                        id:6,
+                        id: 6,
                         name: 'Approche UX/UI'
                     },
                     expertise7: {
-                        id:7,
+                        id: 7,
                         name: 'Wireframing & prototypage'
                     },
                     expertise8: {
-                        id:8,
+                        id: 8,
                         name: 'Analyse de besoins'
                     },
                     expertise9: {
-                        id:9,
+                        id: 9,
                         name: 'Architecture REST'
                     },
                     expertise10: {
-                        id:10,
+                        id: 10,
                         name: 'Architecture SOAP'
                     },
                     expertise11: {
-                        id:11,
+                        id: 11,
                         name: 'Optimisation du référencement (SEO)'
                     },
                     expertise12: {
-                        id:12,
+                        id: 12,
                         name: 'Méthode agile'
+                    },
+                    expertise13: {
+                        id: 13,
+                        name: 'Gestionnaire de version'
+                    },
+                    expertise14: {
+                        id: 14,
+                        name: 'Intégration continue'
                     }
                 }
             },
@@ -118,68 +132,76 @@
                 area: document.getElementById('technologiesContainer'),
                 all: {
                     techno1: {
-                        id:1,
-                        name: 'https://placekitten.com/30/30'
+                        id: 1,
+                        name: '../images/technologies/html.svg'
                     },
                     techno2: {
-                        id:2,
-                        name: 'https://placekitten.com/30/30'
+                        id: 2,
+                        name: '../images/technologies/css.svg'
                     },
                     techno3: {
-                        id:3,
-                        name: 'https://placekitten.com/30/30'
+                        id: 3,
+                        name: '../images/technologies/sass.svg'
                     },
                     techno4: {
-                        id:4,
-                        name: 'https://placekitten.com/30/30'
+                        id: 4,
+                        name: '../images/technologies/javascript.svg'
                     },
                     techno5: {
-                        id:5,
-                        name: 'https://placekitten.com/30/30'
+                        id: 5,
+                        name: '../images/technologies/php.svg'
                     },
                     techno6: {
-                        id:6,
-                        name: 'https://placekitten.com/30/30'
+                        id: 6,
+                        name: '../images/technologies/sql.svg'
                     },
                     techno7: {
-                        id:7,
-                        name: 'https://placekitten.com/30/30'
+                        id: 7,
+                        name: '../images/technologies/java.svg'
                     },
                     techno8: {
-                        id:8,
-                        name: 'https://placekitten.com/30/30'
+                        id: 8,
+                        name: '../images/technologies/c.svg'
                     },
                     techno9: {
-                        id:9,
-                        name: 'https://placekitten.com/30/30'
+                        id: 9,
+                        name: '../images/technologies/cpp.svg'
                     },
                     techno10: {
-                        id:10,
-                        name: 'https://placekitten.com/30/30'
+                        id: 10,
+                        name: '../images/technologies/c-sharp.svg'
                     },
                     techno11: {
-                        id:11,
-                        name: 'https://placekitten.com/30/30'
+                        id: 11,
+                        name: '../images/technologies/node.svg'
                     },
                     techno12: {
-                        id:12,
-                        name: 'https://placekitten.com/30/30'
+                        id: 12,
+                        name: '../images/technologies/react.svg'
                     },
                     techno13: {
-                        id:13,
-                        name: 'https://placekitten.com/30/30'
+                        id: 13,
+                        name: '../images/technologies/jquery.svg'
                     },
                     techno14: {
-                        id:14,
-                        name: 'https://placekitten.com/30/30'
+                        id: 14,
+                        name: '../images/technologies/symfony.svg'
                     },
                     techno15: {
-                        id:15,
-                        name: 'https://placekitten.com/30/30'
+                        id: 15,
+                        name: '../images/technologies/android.svg'
                     },
                     techno16: {
-                        id:16,
-                        name: 'https://placekitten.com/30/30'
+                        id: 16,
+                        name: '../images/technologies/swift.svg'
+                    },
+                    techno17: {
+                        id: 17,
+                        name: '../images/technologies/spring.svg'
+                    },
+                    techno16: {
+                        id: 16,
+                        name: '../images/technologies/springboot.svg'
                     }
                 }
             },
@@ -187,20 +209,20 @@
                 area: document.getElementById('formationsContainer'),
                 all: {
                     formation1: {
-                        id:1,
+                        id: 1,
                         name: 'Programmation et technologies web',
                         schoolName: "Institut Supérieur d'Informatique",
                         year: '2021 - 2023'
                     },
                     formation2: {
-                        id:2,
+                        id: 2,
                         name: 'Webdesign et Communication graphique',
                         schoolName: "Institut de Création et d'animation Numérique",
                         year: '2018 - 2021'
                     }
                     ,
                     formation3: {
-                        id:3,
+                        id: 3,
                         name: 'Baccalauréat Scientifique, spécialité Informatique et Sciences du Numérique',
                         schoolName: "Lycée Flora Tristan",
                         year: '2015 - 2018'
@@ -211,31 +233,31 @@
                 area: document.getElementById('experiencesContainer'),
                 all: {
                     experience1: {
-                        id:1,
+                        id: 1,
                         jobName: 'Intervenant en programmation et logiciels - freelance',
                         jobLocation: 'DigiActivity',
                         date: 'Depuis février 2021'
                     },
                     experience2: {
-                        id:2,
+                        id: 2,
                         jobName: 'Assistant Webdesigner',
                         jobLocation: 'Le Livre de Poche',
                         date: '2019 - 2021'
                     },
                     experience3: {
-                        id:3,
+                        id: 3,
                         jobName: 'Designer Web et réseaux sociaux',
                         jobLocation: 'Agence Taste',
                         date: 'Jan - Juin 2019'
                     },
                     experience4: {
-                        id:4,
+                        id: 4,
                         jobName: 'Graphiste / Infographiste',
                         jobLocation: 'Novodos',
                         date: 'Nov - Dec 2018'
                     },
                     experience5: {
-                        id:5,
+                        id: 5,
                         jobName: 'Préposé à la clientèle',
                         jobLocation: 'Le Walk-In du Magasin Général du Vieux-Montréal',
                         date: 'Depuis Septembre 2021'
@@ -246,4 +268,5 @@
         Informations.init(SETTINGS)
     </script>
 </body>
+
 </html>
